add --file-name-pattern option, initialize sourceFileService in PermissionsCommand, add getFilenamePatternIds and wildcardToRegex methods to PermissionsService, add tests and update test helper